--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.datasource.url=jdbc:mysql://localhost/laligadelbarrio
+spring.datasource.url=jdbc:mysql://laligadelbarriodb/laligadelbarrio
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 server.port=8443
 server.ssl.key-store=classpath:keystore.jks
 server.ssl.key-store-password=password
