--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,11 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
-server.port=8443
-server.ssl.key-store=classpath:keystore.jks
-server.ssl.key-store-password=password
-server.ssl.key-password=password
+#server.port=8443
+server.port=8080
+#server.ssl.key-store=classpath:keystore.jks
+#server.ssl.key-store-password=password
+#server.ssl.key-password=password
 security.user=admin
 security.encodedPassword=$2a$12$duYzZq7rD7rjegqUaTB/Duu8Q02JfXbjvHCWqxIMAPWXV7QlOYONK
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
