--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 server.port=8443
 #server.port=8080
+server.ssl.enabled=true
+server.ssl.protocol=TLS
+server.ssl.enabled-protocols=TLSv1.2
 server.ssl.key-store=classpath:keystore.jks
 server.ssl.key-store-password=password
 server.ssl.key-password=password
