--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,16 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.datasource.url=jdbc:mysql://mysqlmaster:3307/laligadelbarrio
+spring.datasource.url=jdbc:mysql://localhost:3306/laligadelbarrio
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#server.port=8443
 server.port=8080
+#server.ssl.key-store=classpath:keystore.jks
+#server.ssl.key-store-password=password
+#server.ssl.key-password=password
+security.user=admin
+security.encodedPassword=$2a$12$duYzZq7rD7rjegqUaTB/Duu8Q02JfXbjvHCWqxIMAPWXV7QlOYONK
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
