--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -23,6 +23,6 @@ frontend laligadelbarrio
 backend nodos
   balance roundrobin
   cookie SERVERID insert indirect nocache
-  server s1 app-nodo-1:8080 check cookie s1
-  server s2 app-nodo-2:8080 check cookie s2
-  server s3 app-nodo-3:8080 check cookie s3
+  server s1 laligadelbarrio-app-nodo-1:8080 check cookie s1
+  server s2 laligadelbarrio-app-nodo-2:8080 check cookie s2
+  server s3 laligadelbarrio-app-nodo-3:8080 check cookie s3
